@@ -9,6 +9,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - clear out exec_gpus as needed
   b - fix for bugzilla #147 - recreate $PBS_NODESFILE file when restarting a blcr
       checkpointed job
+  b - Fixed kill_job so it will only run epilogue.precancel when a job is canceled
+      and not on normal job exit.
 
 3.0.2
   c - check if the file pointer to /dev/console can be opened. If not, don't attempt to write it
